RESOLVED FIXED310936
AX: AccessibilityRenderObject::boundingBoxRect() is missing a null-check on a Node, causing crashes
https://bugs.webkit.org/show_bug.cgi?id=310936
Summary AX: AccessibilityRenderObject::boundingBoxRect() is missing a null-check on a...
Tyler Wilcock
Reported 2026-03-27 17:04:36 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-27 17:04:42 PDT
Tyler Wilcock
Comment 2 2026-03-27 17:07:41 PDT
Tyler Wilcock
Comment 3 2026-03-27 17:32:16 PDT
EWS
Comment 4 2026-03-30 09:19:05 PDT
Committed 310233@main (3c4712f710df): <https://commits.webkit.org/310233@main> Reviewed commits have been landed. Closing PR #61535 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.