AX: AccessibilityRenderObject::boundingBoxRect() is missing a null-check on a Node, causing crashes https://bugs.webkit.org/show_bug.cgi?id=310936 rdar://173262874

Reviewed by Joshua Hoffman.

The renderer() for an object may not have a corresponding node, and we never null-checked the
node before trying to use it, causing crashes.

* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::boundingBoxRect const):

Canonical link: https://commits.webkit.org/310233@main